Fix contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ All colors MUST be HSL.
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
 
-    --primary: 197 71% 42%;
+    --primary: 197 71% 35%;
     --primary-foreground: 0 0% 100%;
 
     --secondary: 27 87% 45%;
